# SeekersConnect

./: .gitignore  README.md  Untitled  ai-tests-notebook.ipynb  docker-compose.vps-host-edge-reset.yml  docker-compose.vps-host-edge.yml  docker-compose.vps.yml  docker-compose.yml
matchmyresume-bff/: Cargo.toml  Dockerfile  configuration.docker.yaml  configuration.example.yaml  configuration.yaml  configuration.yaml.example  matchmyresume-bff.postman_collection.json
matchmyresume-bff/migrations/: 20240311000000_create_jobs_tables.sql  20240311000001_seed_jobs.sql  20240311000002_create_companies_table.sql  20240312000000_create_resumes_table.sql  20240312000001_create_applications_table.sql  20240312000003_add_resume_file_columns.sql  20240312000004_add_storage_path.sql  20240312000005_add_resume_id_to_applications.sql  20240313000000_comprehensive_seed.sql  20240313000001_create_stats_table.sql  20240314000001_create_profile_tables.sql  20240315000001_add_company_id_to_employer_profiles.sql  20240316000001_add_bio_to_candidate_profiles.sql  20240501000001_add_matcher_embedding_tables.sql
matchmyresume-bff/scripts/: seed-database.sh  seed_test_recruiter_data.sql
matchmyresume-bff/src/: configuration.rs  lib.rs  main.rs  matcher_client.rs
matchmyresume-bff/src/middleware/: auth.rs  cors.rs
matchmyresume-bff/src/module/: mod.rs
matchmyresume-bff/src/module/applications/: handler.rs  model.rs  repository.rs  service.rs
matchmyresume-bff/src/module/profiles/: handler.rs  (+3 more)
matchmyresume-bff/src/routes/: mod.rs
matchmyresume-bff/src/storage/: mod.rs  rustfs.rs
(+152 files in other folders)
