[package]
name = "matchmyresume-bff"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-multipart = "0.6"
actix-service = "2.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
config = "0.15.19"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
log = "0.4.29"
env_logger = "0.11.8"
regex = "1.10"
rand = "0.8"
base64 = "0.22"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
async-trait = "0.1"

[dev-dependencies]
actix-rt = "2.8"

